# orders_test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_06_13:04-c45661225829_create_product_table.py  2025_03_06_13:09-f7ffbd25fe94_create_orders_table.py  2025_03_06_13:30-86600dab4158_create_relationship.py  2025_03_06_15:55-92565ca80036_create_user_table.py  2025_03_07_12:21-9c6f39dd46b4_create_users_and_orders_relationship.py
app/: main.py
app/application/repositories/: base_repo.py  order_repo.py
app/application/services/: order_service.py
app/application/users/: fastapi_users.py  transport.py  user_manager.py
app/core/: config.py  logging.py
app/domain/models/: __init__.py  base.py  order.py  product.py  user.py
app/infrastructure/: config.py  db_connection.py  logging.py  redis_cache.py
app/presentation/api/: routers.py
app/presentation/api/endpoints/: __init__.py  order.py
app/presentation/mappers/: order_mapper.py
app/presentation/schemas/: order.py  order_dto.py  product_dto.py
tests/: conftest.py  test_create_order.py  test_delete_order.py  test_get_order_by_id.py  test_get_orders.py  test_update_order.py  test_user.py
