[tool.poetry]
name = "orders-test"
version = "0.1.0"
description = ""
authors = ["Alexander <sasha.14999933@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
