[tool.poetry]
name = "orders-test"
version = "0.1.0"
description = ""
authors = ["Alexander <sasha.14999933@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
redis = "^5.2.1"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
fakeredis = "^2.27.0"

[tool.pytest.ini_options]
pythonpath = ". app"
asyncio_mode = "auto"
addopts = "--disable-warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
